--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+python-dotenv
 pandas
-python - dotenv
 numpy
+pymongo
+certifi
+pymongo[srv]
+scikit-learn
+mlflow
+pyaml
+dagshub
+fastapi
+uvicorn
+python-multipart
+
+
+-e .
