creating a CI/CD AND CREATE A CONTAINER TO A DOCKER IMAGE

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   integration:
-    name: Continuous Integration CI from CI/CD PIPELINE
+    name: Continuous Integration #CI from CI/CD PIPELINE
     runs-on: ubuntu-latest # Use the latest Ubuntu runner from GitHub Actions
     steps:
       - name: Checkout Code
